--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       
       .lds-ring {
   display: inline-block;
-  position: relative;
+  position: center;
   width: 80px;
   height: 80px;
 }
@@ -21,8 +21,8 @@
   position: absolute;
   width: 64px;
   height: 64px;
-  margin: 28px;
-  border: 28px solid #fff;
+  margin: 10px;
+  border: 10px solid #fff;
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
   border-color: #fff transparent transparent transparent;
