--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       
       .lds-ring {
   display: inline-block;
-  position: center;
+  position: relative;
   width: 80px;
   height: 80px;
 }
